examples/test/testpolicy48.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy48
  namespace: namespace264
spec:
  podSelector:
    matchLabels:
      key17: value43
      key2: value37
      key23: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value18
      podSelector:
        matchLabels:
          key28: value14
          key4: value33
